# fintech-python-template

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: market_analysis.ipynb
src/fintech/: __init__.py
src/fintech/analysis/: indicators.py
src/fintech/data/: market_data.py
src/fintech/utils/: helpers.py
tests/: test_indicators.py
