[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech"
version = "0.1.0"
description = "A Python toolkit for financial analysis"
requires-python = ">=3.10"

# Tool configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi-line-output = 3
include-trailing-comma = true
force-grid-wrap = 0
use-parentheses = true
line-length = 88

[tool.mypy]
python-version = "3.10"
warn-return-any = true
warn-unused-configs = true
disallow-untyped-defs = true
check-untyped-defs = true 